Fix #123352: Time offset chain mode inserts wrong keys

The time offset modifier inserts keys sequentially, overwriting earlier
frames with later ones, and only the last relevant frame remains used.

In chain mode this process is repeated for every chain segment and then
all segments are repeated to fill the entire timeline. However, because
all keyframes are inserted for every repetition, they can overwrite
keyframes from earlier repetitions as well.

Clamping the insert keyframe makes sure that no keys are inserted
outside of the target range for a give repetition.

Pull Request: https://projects.blender.org/blender/blender/pulls/123423